train from dataset endpoint
